daniels-portfolio/styles/index.css
/* Root Style */
:root {
  scroll-behavior: smooth;
  scroll-padding: 3rem;

  --primary-text-color: #343434;
  --secondary-text-color: #999;
  --alt-text-color: #748182;
  --bg-grey: #f7f7f7;
}

/* Resitting Styles */
body {
  font-family: "Poppins", sans-serif;
  color: var(--primary-text-color);
  font-weight: 400;
}

h1,
h2,
h3,
h4,
h5,
h6,
.brand {
  font-family: "Montserrat", sans-serif;
}

a {
  text-decoration: none;
}

figure {
  margin: 0;
}

img {
  width: 100%;
}

ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

p {
  line-height: 1.6;
  color: var(--alt-text-color);
}

/* Shared styles */
.bg-grey {
  background-color: var(--bg-grey);
}

.section-title {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 2.5rem;
  font-weight: 900;
  position: relative;
  z-index: 6;
}

.section-title::after {
  content: "";
  display: block;
  position: absolute;
  top: 80%;
  z-index: -1;
  background-image: url("../imgs/dots.png");
  width: 100%;
  height: 1.2rem;
}

.circle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 70px;
  width: 70px;
  font-size: 1.5rem;
  border-radius: 50%;
  background-color: var(--bg-grey);
  margin: 0 auto;
  -webkit-transition: all 450ms ease-in-out;
  -o-transition: all 450ms ease-in-out;
  transition: all 450ms ease-in-out;
}

.service-card:hover .circle,
.address__item:hover .circle {
  color: var(--bs-white);
  background-color: var(--bs-dark);
}

/* Navbar Styles */
#navbar-header {
  transition: all 250ms ease-in-out;
}

.header-scrolled {
  background-color: var(--bg-grey);
  padding: 0 !important;
}

.brand {
  font-size: 1.1rem;
  font-weight: bold;
  letter-spacing: 0.05em;
  color: var(--bg-grey);
}

.navbar-toggler:focus,
.navbar-toggler:focus-visible {
  -webkit-box-shadow: none;
  box-shadow: none;
  border: none;
}

.nav-link {
  --bg-color: var(--bg-grey);
  font-size: 0.9rem;
  font-weight: 600;
  position: relative;
  color: var(--bg-grey);
}

.nav-link::after {
  content: "";
  display: block;
  width: 0px;
  height: 2px;
  margin: auto;
  background-color: var(--bg-color);
  -webkit-transition: all 550ms ease;
  -o-transition: all 550ms ease;
  transition: all 550ms ease;
}

.nav-link.active::after {
  width: 2.6rem;
}

.nav-pills .nav-link.active,
.nav-pills .show > .nav-link {
  color: var(--bg-grey);
  background-color: transparent;
}

@media screen and (min-width: 992px) {
  .navbar-nav.nav-pills {
    gap: 1rem;
  }

  .nav-link.active::after {
    width: 100%;
  }
}

/* Hero Styles */
.hero__container {
  background: url("../imgs/bg.jpg");
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
  background-attachment: fixed;
}

.hero__subtitle {
  font-size: 3.125rem;
}

.hero li {
  width: 40px;
  height: 40px;
  color: var(--bs-white);
}

.hero li a {
  color: var(--bs-white);
  font-size: 1rem;
}

@media screen and (min-width: 1100px) {
  .cd-headline {
    font-size: 3.8rem;
  }
}

/* About Styles */
.about figure::after {
  content: "";
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 80%;
  height: 80%;
  background: url("../imgs/dots.png");
  z-index: -1;
}

.about figure img {
  position: relative;
  left: 5%;
  bottom: 10%;
}

.about__title {
  font-size: 1.9rem;
  font-weight: 800;
}

.about header .job-title {
  font-weight: 400;
  font-size: 0.9rem;
  letter-spacing: 2px;
  color: var(--secondary-text-color);
}

.about__skill-title {
  font-size: 0.8rem;
  font-weight: 500;
}

.about__btn {
  font-size: 0.9rem;
  -webkit-transition: all 550ms ease;
  -o-transition: all 550ms ease;
  transition: all 550ms ease;
}

.about__btn--dark {
  background: var(--bs-dark);
  color: var(--bs-white);
  border: 1px solid var(--bs-dark) !important;
}

@media screen and (min-width: 999px) {
  .about figure img {
    left: 0;
    bottom: 5%;
  }
}

/* Services Styles */
.service__title {
  font-size: 1.2rem;
  font-weight: 800;
}

/* Statistics Styles */
.statistics__icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.9rem;
  margin: 0 auto;
}

.statistics h3 {
  font-size: 1.9rem;
  font-weight: 900;
}

.statistics p {
  font-weight: 600;
}

/* Portfolio Styles */
.portfolio .nav-link {
  font-weight: 700;
  font-size: 1rem;
}

.portfolio .nav-link:hover,
.portfolio .nav-link:focus,
.portfolio .nav-link:focus-visible {
  color: var(--bs-dark);
}

.portfolio .overlay {
  position: absolute;
  inset: 1%;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  background-color: transparent;
  opacity: 0;
}

.portfolio .overlay h6 {
  -webkit-transform: translateY(-20px);
  -ms-transform: translateY(-20px);
  transform: translateY(-20px);
}

.portfolio .overlay a {
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  font-size: 0.8rem;
  width: 30px;
  height: 30px;
  background: var(--bs-dark);
  color: var(--bs-white);
}

.portfolio .overlay,
.portfolio .overlay h6,
.portfolio .overlay a {
  -webkit-transition: all 550ms ease;
  -o-transition: all 550ms ease;
  transition: all 550ms ease;
}

.inner:hover .overlay,
.inner:hover h6,
.inner:hover a {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.inner:hover .overlay {
  background-color: var(--bs-white);
  opacity: 1;
}

.inner a:hover {
  background: var(--bs-white);
  color: var(--bs-dark);
}

/* Testimonials Style  */
.testimonial__profile {
  width: 90px;
  height: 90px;
  margin: 0 auto 20px;
  border-radius: 50%;
}

.testimonial__job {
  font-size: 0.75rem;
  font-weight: 600;
  color: #888;
}

.carousel {
  padding-bottom: 5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.carousel-indicators [data-bs-target] {
  background-color: #869791;
  width: 10px !important;
  height: 10px !important;
  border-radius: 50%;
}

/* Our Team Styles */
.team .overlay {
  position: absolute;
  inset: 2%;
  background-color: rgba(255, 255, 255, 0.95);
  opacity: 0;
  -webkit-transform: rotateY(180deg) scale(0.5);
  transform: rotateY(180deg) scale(0.5);
  -webkit-transition: all 550ms ease;
  -o-transition: all 550ms ease;
  transition: all 550ms ease;
}

.team .card img {
  -webkit-transition: all 550ms ease;
  -o-transition: all 550ms ease;
  transition: all 550ms ease;
}

.team .card:hover .overlay {
  opacity: 1;
  -webkit-transform: rotateY(0deg) scale(1);
  transform: rotateY(0deg) scale(1);
  cursor: pointer;
}

.team .card:hover img {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.team .card a {
  font-size: 1rem;
  width: 40px;
  height: 40px;
  background: var(--bs-dark);
  color: var(--bs-white);
  -webkit-transition: all 550ms ease;
  -o-transition: all 550ms ease;
  transition: all 550ms ease;
}

.team .card a:hover {
  background: var(--bs-white);
  color: var(--bs-dark);
}

/* Contact Style  */
.address__item .circle {
  width: 60px;
  height: 60px;
}

.contact .btn {
  background-color: var(--bs-dark);
  color: var(--bs-white);
  font-size: 0.8rem;
}

.contact .btn:hover {
  background-color: var(--bs-white);
  color: var(--bs-dark);
}

.contact form {
  max-width: 850px;
  margin: 0 auto;
}

.form-control {
  padding: 0.63rem;
  font-size: 14px;
}

.form-control::-webkit-input-placeholder {
  color: #8c8c8c;
}

.form-control::-moz-placeholder {
  color: #8c8c8c;
}

.form-control:-ms-input-placeholder {
  color: #8c8c8c;
}

.form-control::-ms-input-placeholder {
  color: #8c8c8c;
}

.form-control::placeholder {
  color: #8c8c8c;
}

.form-control:focus,
.form-control:focus-visible {
  border: none;
  outline: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.form-control:focus,
.form-control:focus-visible {
  background-color: var(--bg-grey);
}

@media screen and (min-width: 992px) {
  .contact form {
    max-width: 992px;
  }

  .half-row {
    width: 49%;
  }
}

/* Footer Styles */
footer {
  overflow: hidden;
  font-size: 14px;
}

footer p {
  margin: 0;
}

